--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "less": "^2.7.2",
     "less-loader": "^4.0.4",
     "vue": "^2.2.2",
+    "vue-resource": "^1.3.4",
     "vue-router": "^2.2.0",
     "vuex": "^2.2.1"
   },
